# turboquant-tinygrad-bridge

./: .gitignore  .gitmodules  BENCHMARKS.md  LICENSE  README.md  gx10-connectx7-200gbe-bandwidth-investigation.md  mkdocs.yml  pyproject.toml  upstream.yaml
benchmarks/: accuracy_showcase.py  baseline_compute.py  baseline_device.py  baseline_metal.json  baseline_metal_patched.json  baseline_nv.json  baseline_nv_rtx6000.json  bridge_benefit_test.py  cluster_backend.py  cluster_roundrobin.py  cluster_toks.py  cluster_toks_4node.json  cluster_toks_full.json  cluster_toks_gx10_fixed.json  cluster_toks_local.json  compute_combined.json  compute_metal.json  compute_metal_patched.json  compute_nv.json  compute_nv_rtx6000.json  generative_cluster.py  generative_pipeline.py  hardware_warmup.py  hardware_warmup_results.json  long_context_demo.py  model_bench_qwen3_8b.jsonl  monitor.py  multi_user_stress.py  native_vs_tinygrad.py  native_vs_tinygrad_results.json  qwen2.5_7b_triatt_stats.npz  real_bridge_test.py  rng_parity_check.c  run_model_bench.sh  single_vs_cluster.py  sustained_bridge_test.py  toks_per_second.py  toks_results_qwen3_8b.json  toks_results_qwen3_8b_bulk.json  toks_results_qwen3_8b_prealloc.json  (+3 more)
deploy/: Dockerfile  README.md  docker-compose.yml  gx10_setup.sh  start_decode_node.sh
docs/: EGPU-TESTING.md  REPRODUCE.md  RFC-double-buffer-kv-bridge.md  RFC-metal-cuda-kv-bridge.md  demo-script.md  functional-requirements.md  generative-mesh-architecture.md  hyvia-baseline-questions.md  results-summary.md  tinygrad-ppadjin.md  triattention-hybrid-fix.md  (+1 more)
(+60 files in other folders)
