[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tqbridge"
version = "0.1.0"
description = "TurboQuant cross-backend KV cache bridge for Metal + CUDA split inference"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "James Tervit", email = "james@chronara.com" },
]
dependencies = [
    "numpy>=1.26",
    "scipy>=1.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
